<resources>
    <string name="app_name">Desafio2Profesores</string>
    <string name="listadoaula">LISTADO AULA</string>
    <string name="listadoord">LISTADO EQUIPO</string>
    <string name="listadoprof">LISTADO PROFESOR</string>
    <string name="nuevoaula">NUEVO AULA</string>
    <string name="nuevooord">NUEVO EQUIPO</string>
    <string name="nuevoprof">NUEVO PROFESOR</string>
    <string name="buscar">BUSCAR</string>
    <string name="editar">EDITAR</string>
    <string name="borrar">BORRAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="codigo">CODIGO:</string>
    <string name="nombre">NOMBRE:</string>
    <string name="clave">CLAVE:</string>
    <string name="rol">ROL:</string>
    <string name="aula">AULA:</string>
    <string name="profesor">Profesor</string>
    <string name="Jefedepartamento">Jefe de departamento</string>
    <string name="cpu">CPU:</string>
    <string name="gestioncentros">Gestión de centros educativos</string>
    <string name="ram">RAM:</string>
    <string name="espacio">ESPACIO:</string>
    <string name="profesores">PROFESORES</string>
    <string name="aulas">AULAS</string>
    <string name="ordenadores">ORDENADORES</string>
    <string name="visualizacion">Visualizacion de inventario</string>
    <string name="edaulas">EDICION DE AULAS</string>
    <string name="edord">EDICION DE ORDENADORES</string>
    <string name="edprof">EDICION DE PROFESORES</string>
    <string name="pantallainicio">PANTALLA DE INICIO</string>
    <string name="ramgb">RAM (GB)</string>
    <string name="almgb">ALMACENAMIENTO (GB)</string>
    <string name="volver">VOLVER</string>
</resources>